<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/items"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/player_id"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/user_ID"
        android:textSize="24sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:text="@string/Player"
        android:fontFamily="sans-serif-condensed"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Points"
        android:textAlignment="textEnd"
        android:textSize="24sp" />
</LinearLayout>